--- a/style.css
+++ b/style.css
@@ -4,47 +4,66 @@
     box-sizing: border-box;
     text-decoration: none;
     list-style: none;
+    font-family: 'Poppins', sans-serif;
+}
+
+h1, h2 {
+    font-family: 'Roboto', sans-serif;
 }
 
 html {
     scroll-behavior: smooth;
 }
 
-.navigation-bar {
-    width: 100%;
-    height: 80px;
+.informacoes-gerais {
+    display: flex;
+}
+
+img {
+    width: 300px; /* Ajusta automaticamente ao tamanho do contêiner */
+    height: 250px;
+    display: block; /* Remove espaços extras */
+    object-fit: cover;
+}
+
+.navigation-bar{
     background-color: gray;
-    position: absolute;
+    height: 50px;
 }
 
 .inside-navigation-bar{
+    left: 1%;
     display: flex;
-    gap: 20px;
-
+    gap: 10px;
 }
 
-summary {
-    list-style: none;
-    display: inline;
-    cursor: pointer;
-    padding-left: 10px;
-    margin: 5px;
+.left-side{
+    background-color: aqua;
 }
 
-.informacoes-gerais{
-    width: 100%;
-    height: 400px;
-    background-color: greenyellow;
+
+
+/* 
+Segue abaixo a responsividade para telas menores ;)
+*/ 
+
+@media (max-width: 768px) {
+    .navigation-bar {
+        background-color: gray;
+        width: auto;
+        height: auto;
+    }
+
+    .inside-navigation-bar {
+        padding-top: 5px;
+        padding-bottom: 5px;
+        flex-direction: column; /* Menu empilhado */
+        text-align: center;
+    }
+
+    .informacoes-gerais {
+        flex-direction: column;
+        text-align: center;
+    }
 }
 
-.solicitando-ajuda {
-    width: 100%;
-    height: 400px;
-    background-color: blueviolet;
-}
-
-.casos-comuns {
-    width: 100%;
-    height: 400px;
-    background-color: pink;
-}
