--- a/style.css
+++ b/style.css
@@ -17,6 +17,7 @@ html {
 
 .informacoes-gerais {
     display: flex;
+    justify-content: space-between;
 }
 
 img {
@@ -24,23 +25,81 @@ img {
     height: 250px;
     display: block; /* Remove espaços extras */
     object-fit: cover;
+    right: 0px;
 }
 
 .navigation-bar{
     background-color: gray;
     height: 50px;
+    padding-left: 1%;
+    display: flex;
+    justify-content: space-between;
+}
+
+.begin {
+
 }
 
 .inside-navigation-bar{
     left: 1%;
     display: flex;
-    gap: 10px;
+    
 }
 
 .left-side{
     background-color: aqua;
+    width: auto;
+    padding-left: 1%;
 }
 
+
+
+.emblem{
+    background-color: red;
+}
+
+.emblem img{
+    width: 50px;
+    height: 100px;
+}
+
+.right-side img {
+    width: 100px;
+    height: 200px;
+}
+
+#localizacao{
+    height: 300px;
+    background-color: red;
+    padding-left: 1%;
+}
+
+.curiosidades{
+    background-color: aqua;
+    height: 300px;
+    display: flex;
+}
+
+.separacoes{
+    display: flex;
+    padding-left: 1%;
+}
+
+.left-localizacao{
+
+}
+
+.right-localizacao{
+    
+}
+
+.right-localizacao{
+    
+}
+
+footer{
+    height: 400px;
+}
 
 
 /* 
@@ -63,7 +122,24 @@ Segue abaixo a responsividade para telas menores ;)
 
     .informacoes-gerais {
         flex-direction: column;
-        text-align: center;
+        
     }
+    .left-side {
+        
+        width: 100%;
+    }
+
+    .right-side{
+        display: flex;
+        justify-content: center;
+        background-color: white;
+    }
+    .right-side img{
+
+        width: 300px;
+        height: 200px;
+        
+    }
+    
 }
 
