--- a/style.css
+++ b/style.css
@@ -18,6 +18,10 @@ a{
     color: inherit;
 }
 
+a:hover {
+    color: skyblue;
+}
+
 html {
     scroll-behavior: smooth;
 }
@@ -39,7 +43,7 @@ img {
 .navigation-bar{
     background-color: gray;
     height: 50px;
-    padding-left: 3%;
+    padding-left: 2%;
     display: flex;
     justify-content: space-between;
 }
@@ -51,14 +55,14 @@ img {
 .inside-navigation-bar{
     display: flex;
     gap: 15px;
-    padding-right: 3%;
+    padding-right: 2%;
 }
 
 .left-side{
     background-color: aqua;
     width: 100%;
     height: 400px;
-    padding-left: 5%;
+    padding-left: 2%;
 }
 
 
@@ -80,7 +84,7 @@ img {
 #localizacao{
     height: 300px;
     background-color: red;
-    padding-left: 1%;
+    padding-left: 2%;
 }
 
 .curiosidades{
@@ -91,7 +95,7 @@ img {
 
 .separacoes{
     display: flex;
-    padding-left: 1%;
+    padding-left: 2%;
 }
 
 .left-localizacao{
@@ -126,6 +130,8 @@ Segue abaixo a responsividade para telas menores ;)
         background-color: gray;
         width: auto;
         height: auto;
+        text-align: center;
+        flex-direction: column;
     }
 
     .inside-navigation-bar {
@@ -133,6 +139,7 @@ Segue abaixo a responsividade para telas menores ;)
         padding-bottom: 5px;
         flex-direction: column; /* Menu empilhado */
         text-align: center;
+        justify-content: center;
     }
 
     .informacoes-gerais {
@@ -157,4 +164,5 @@ Segue abaixo a responsividade para telas menores ;)
     }
     
 }
+
 
