--- a/estilocontato.css
+++ b/estilocontato.css
@@ -116,8 +116,26 @@ img {
     background-color: burlywood;
 }
 
+
+/* 
+Estilização para o rodapé e elementos dentro do rodapé
+*/
+
 footer{
-    height: 400px;
+    height: 200px;
+    display: flex;
+}
+
+.social-media {
+    width: 50%;
+    height: auto;
+    background-color: brown;
+}
+
+.phone {
+    width: 50%;
+    height: auto;
+    background-color: green;
 }
 
 
